# bloom2app

./: .env.docker.example  .gitignore  PLAN_TRACKING_PLANS.md  README.md  STAGING_PLAN.md  docker-compose.yml  progress.md  sb  sf
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  chat_db.py  chat_routes.py  chat_socket.py  database.py  db.py  document_processor.py  main.py  metric_templates.py  patient_practitioner_routes.py  plan_analytics.py  plan_db.py  plan_insights.py  plan_routes.py  practitioner_ai.py  practitioner_auth.py  practitioner_db.py  practitioner_routes.py  seed.py
backend/app/dashboard/: __init__.py  biomarkers.py  generator.py  schemas.py
backend/app/plan_design_agent/: agent.py  runner.py  tools.py
backend/app/voice_agent/: __init__.py  agent.py  tools.py
backend/migrations/: 001_initial_schema.sql  002_indexes.sql
frontend/: .dockerignore  App.tsx  Dockerfile  app.json  nginx.conf  package-lock.json  package.json
frontend/src/: auth.ts  chat.ts  config.ts  dashboard.ts  onboarding.ts  practitioners.ts  types.ts  useChatSocket.ts  useVoiceAssistant.ts
frontend/src/audio/: NativeAudioEngine.ts  WebAudioEngine.ts  audioEngine.ts  types.ts
frontend/src/navigation/: MainTabs.tsx  RootNavigator.tsx
frontend/src/screens/: AuthScreen.tsx  ChatScreen.tsx  DashboardScreen.tsx  (+2 more)
practitioner/: .dockerignore  .env.example  AGENTS.md  Dockerfile  next.config.ts  package-lock.json  package.json
practitioner/src/: proxy.ts
proxy/: .dockerignore  Dockerfile  nginx.conf
(+46 files in other folders)
