[project]
name = "bloom2-backend"
version = "0.1.0"
description = "Bloom2 voice assistant backend — FastAPI + ADK + Gemini Live API"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }

dependencies = [
    "google-adk>=1.32.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.0.0",
    "python-socketio>=5.16.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
